--- a/Qtest.qmd
+++ b/Qtest.qmd
@@ -4,23 +4,37 @@ format: html
 editor: visual
 ---
 
-## Quarto
+## Quarto tutorial, example ggplot
 
-Quarto enables you to weave together content and executable code into a finished document. To learn more about Quarto see <https://quarto.org>.
+This document is a little practice piece in literate coding, using Quarto and github. Some ggplot scripts are used as example.
 
-## Running Code
-
-When you click the **Render** button a document will be generated that includes both content and the output of embedded code. You can embed code like this:
+## Install necessary libraries
 
 ```{r}
-1 + 1 + 1
+library(tidyverse)
+library(ggplot2)
 ```
 
-You can add options to executable code like this
+## Load necessary libraries
 
 ```{r}
-#| echo: false
-2 * 2
+library(tidyverse)
+library(ggplot2)
 ```
 
+## Import some data from Gapminder and convert it to the tibble format
+```{r}
+gapminder <- read.csv("https://raw.githubusercontent.com/swcarpentry/r-novice-gapminder/main/episodes/data/gapminder_data.csv") 
+gapminder <- as_tibble(gapminder)
+```
+
+
+## Make an initial plot of first plot life expactancy over time 
+
+Here we produce an initial ggplot. 
+```{r}
+ggplot(data=gapminder, aes( x = year, y = lifeExp, group=country))+
+  geom_point(aes(color=continent))+
+  geom_line(color="blue")
+```
 The `echo: false` option disables the printing of code (only output is displayed).
